NDAUAT/force-app/main/default/objects/Lead/fields/FN__Do_Not_Map__c.field-meta.xml
<CustomField>
    <fullName>FN__Do_Not_Map__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Map</label>
    <type>Checkbox</type>
</CustomField>