NDAUAT/force-app/main/default/objects/Lead/fields/FN__Find_Nearby__c.field-meta.xml
<CustomField>
    <fullName>FN__Find_Nearby__c</fullName>
    <formula>IF( ISPICKVAL(FN__Mapping_Status__c , &#39;Located&#39;),  HYPERLINK( &quot;apex/FN__FindNearbymap?aid=null&amp;lid=&quot; &amp; Id,&quot;Map it!&quot;,&quot;_parent&quot;) ,   HYPERLINK( &quot;apex/FN__LGeoCode?id=&quot; &amp; Id,&quot;Locate Lead&quot;,&quot;_parent&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Find Nearby</label>
    <type>Text</type>
</CustomField>