NDAUAT/force-app/main/default/objects/Lead/fields/FN__Mapping_Status__c.field-meta.xml
<CustomField>
    <fullName>FN__Mapping_Status__c</fullName>
    <label>Mapping Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Located Yet</fullName>
                <default>true</default>
                <label>Not Located Yet</label>
            </value>
            <value>
                <fullName>Located</fullName>
            </value>
            <value>
                <fullName>Problem with Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>